add get endpoinds docs for tests
